2012-07-17
	add general.secure_open replace __builtin__.open
	add general.secure_listdir replace os.listdir
	add general.secure_remove replace os.remove
	add general.secure_rmdir replace os.rmdir
	add general.secure_mkdir replace os.mkdir
	disable os.link, os.symlink
	add general.secure_rename replace os.rename
	add general.secure_chdir
	add general.secure_chmod replace os.chmod
	add general.secure_chown replace os.chown
	disable os.chdir, os.chroot, os.mkfifo

2012-07-17
	make password hash extend word random each login
	add script.reloadsinglescript and command /reloadsinglescript path

2012-07-17
	add script.shownpc and command /shownpc npc_id
	add script.hidenpc and command /hidenpc npc_id
	add script.blackout and command /blackout time_ms
	add script.whiteout and command /whiteout time_ms
	make all motion_ex and emotion_ex useable without command

2012-07-16
	add normal emotion support
	move old script.emotion to script.emotion_ex
	move old command /emotion to /emotion_ex
	add script.emotion and command /emotion emotion_id
	set some signed value to unsigned

2012-07-15
	add whisper support
	add greeting support
	use general.get_name_map instead of eval
	fix MapDataHandler.send_server error
	add script.emotion and command /emotion emotion_id

2012-06-30
	add emotion support (/*happy, /*anger3, /*tears, /*fun)

2012-06-29
	db update to 341, fix motion type error(char->uchar), add type EXSWORD

2012-06-05
	update db to v338

2012-03-23
	update to 332, add weapon motion support

2012-01-27
	add virtualeco_launcher.exe, fix script don't work on linux

2012-01-26
	upgrade database

2012-01-17
	improve packet recv stability

2012-01-16
	improve packet recv performance

2012-01-10
	add test, fix bug with close connection

2012-01-10
	fix bug with script.killall, logout cancel

2012-01-10
	attack_monster

2012-01-10
	monster spawn / kill

2012-01-09
	fix bug with sit

2012-01-05
	move monster.py to obj,
	convert all file with windows format (\r\n),