@@ -20,10 +20,10 @@ lv_job1 = 1
 lv_job2x = 1
 lv_job2t = 1
 lv_job3 = 1
-gold = 0
-x = 7.39
-y = 5.73
-dir = 3
+gold = 100
+x = 9.37
+y = 4.43
+dir = 7
 
 [status]
 str = 8
@@ -53,13 +53,14 @@ socks = 0
 pet = 0
 
 [sort]
-item = 1,2,3
+item = 1,3,2,4
 warehouse = 
 
 [item]
 1 = 60107702,1
-2 = 10055500,1
+2 = 60085404,1
 3 = 10020114,1
+4 = 10055500,1
 
 [warehouse]
 
